# conan-test-issue-3650

./: run.sh
base/: CMakeLists.txt  conanfile.py
base/Base/: CMakeLists.txt  base.cpp
derived/: CMakeLists.txt  conanfile.py
derived/Derived/: CMakeLists.txt  derived.cpp
