add_library( Base STATIC )

target_sources(Base PRIVATE base.h base.cpp)

get_filename_component(RUNTIME_BASENAME ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} NAME)
get_filename_component(LIBRARY_BASENAME ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} NAME)
get_filename_component(ARCHIVE_BASENAME ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY} NAME)
    
install(TARGETS Base
    EXPORT Base
    RUNTIME DESTINATION ${RUNTIME_BASENAME}
    LIBRARY DESTINATION ${LIBRARY_BASENAME}
    ARCHIVE DESTINATION ${ARCHIVE_BASENAME}
    INCLUDES DESTINATION include
    )
